--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </section>
 
     <section class="devices">
-        <h2 class="description__title">Disponível nos seus dispositivos favoritos</h2>
+        <h2 class="description__title last">Disponível nos seus dispositivos favoritos</h2>
         <ul class="devices__list">
             <li>
                 <img src="img/tv.png" alt="Ícone TV">
